kubernetes/tenants/base/bravo/tenant.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: team-bravo
  name: team-bravo-tenant
